Remove references to Java 9 test code